CFIN-593: add `clearing` lambda
