# src/clearing/handler.js
@@ -1,0 +1,8 @@
+const { getClearingCourses } = require("./getClearing");
+const { success } = require("../response");
+
+module.exports.clearing = async () => {
+    const result = await getClearingCourses();
+
+    return success(result);
+};
